contacts and encoder tests can be finished/cancelled with End/Escape

--- a/glade/app1.glade
+++ b/glade/app1.glade
@@ -1460,6 +1460,12 @@
                                                             <placeholder/>
                                                             </child>
                                                             <child>
+                                                            <placeholder/>
+                                                            </child>
+                                                            <child>
+                                                            <placeholder/>
+                                                            </child>
+                                                            <child>
                                                             <widget class="GtkLabel" id="label_start_selector_jumps">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
@@ -7607,9 +7613,10 @@ after time</property>
                                                             <property name="can_default">True</property>
                                                             <property name="receives_default">True</property>
                                                             <property name="has_tooltip">True</property>
-                                                            <property name="tooltip" translatable="yes">Finish test (save test until this moment)	</property>
+                                                            <property name="tooltip" translatable="yes">Finish test (save test until this moment).  Or press 'End'.</property>
                                                             <property name="use_underline">True</property>
                                                             <signal name="clicked" handler="on_event_execute_finish_clicked" swapped="no"/>
+                                                            <accelerator key="End" signal="clicked"/>
                                                             <child>
                                                             <widget class="GtkImage" id="image_button_finish">
                                                             <property name="visible">True</property>
@@ -7633,8 +7640,9 @@ after time</property>
                                                             <property name="can_default">True</property>
                                                             <property name="receives_default">True</property>
                                                             <property name="has_tooltip">True</property>
-                                                            <property name="tooltip" translatable="yes">Cancel test</property>
+                                                            <property name="tooltip" translatable="yes">Cancel test. Or press 'escape'.</property>
                                                             <signal name="clicked" handler="on_event_execute_button_cancel_clicked" swapped="no"/>
+                                                            <accelerator key="Escape" signal="clicked"/>
                                                             <child>
                                                             <widget class="GtkImage" id="image_button_cancel">
                                                             <property name="visible">True</property>
@@ -16319,9 +16327,10 @@ Concentric</property>
                                                             <property name="can_default">True</property>
                                                             <property name="receives_default">True</property>
                                                             <property name="has_tooltip">True</property>
-                                                            <property name="tooltip" translatable="yes">Finish capture</property>
+                                                            <property name="tooltip" translatable="yes">Finish capture (save test until this moment).  Or press 'End'.</property>
                                                             <property name="use_underline">True</property>
                                                             <signal name="clicked" handler="on_button_encoder_capture_finish_clicked" swapped="no"/>
+                                                            <accelerator key="End" signal="clicked"/>
                                                             <child>
                                                             <widget class="GtkImage" id="image_encoder_capture_finish">
                                                             <property name="visible">True</property>
@@ -16346,9 +16355,10 @@ Concentric</property>
                                                             <property name="can_default">True</property>
                                                             <property name="receives_default">True</property>
                                                             <property name="has_tooltip">True</property>
-                                                            <property name="tooltip" translatable="yes">Cancel process</property>
+                                                            <property name="tooltip" translatable="yes">Cancel process. Or press 'escape'.</property>
                                                             <property name="use_underline">True</property>
                                                             <signal name="clicked" handler="on_button_encoder_cancel_clicked" swapped="no"/>
+                                                            <accelerator key="Escape" signal="clicked"/>
                                                             <child>
                                                             <widget class="GtkImage" id="image_encoder_capture_cancel">
                                                             <property name="visible">True</property>
@@ -21158,6 +21168,12 @@ then click this button.</property>
                                                             <property name="x_options"/>
                                                             <property name="y_options"/>
                                                             </packing>
+                                                            </child>
+                                                            <child>
+                                                            <placeholder/>
+                                                            </child>
+                                                            <child>
+                                                            <placeholder/>
                                                             </child>
                                                             <child>
                                                             <placeholder/>
